2007-08-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-page-layout.c: applied patch from Stefan
	Röllin that makes the preview resize with the dialog (bug #466923).

2007-08-15  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorprofilecombobox.c
	* libgimpwidgets/gimpcolorprofilestore.c: documentation.

2007-08-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/Makefile.am
	* plug-ins/script-fu/scripts/fade-outline.scm: removed
	fade-outline script. Fixes bug #466382.

2007-08-15  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: add tooltips to the profile
	combo boxes.

2007-08-14  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorprofilecombobox.[ch]
	* libgimpwidgets/gimpcolorprofilestore.[ch]
	* libgimpwidgets/gimpcolorprofilestore-private.h: changed API to
	deal with filenames instead of URIs.

	* app/widgets/gimpprofilechooserdialog.[ch]: same here.

	* app/dialogs/preferences-dialog.c
	* plug-ins/common/lcms.c: changed accordingly.

2007-08-14  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c
	* plug-ins/common/lcms.c: don't unref the file-chooser dialog.

2007-08-14  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimpcolorprofilecombobox.[ch]
	* libgimpwidgets/gimpcolorprofilestore.[ch]
	* libgimpwidgets/gimpcolorprofilestore-private.h: new widget to
	select color profiles.

	* libgimpwidgets/gimpwidgets.def: updated.

	* app/widgets/gimpprofilechooserdialog.[ch]: remember the name of
	the last previewed profile.

	* app/dialogs/preferences-dialog.c: use the new color profile
	combo-box.

	* plug-ins/common/lcms.c: use the new color profile combo-box.

2007-08-14  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage-item-list.c: fixed API docs.

2007-08-14  Øyvind Kolås  <pippin@gimp.org>

	* app/display/gimpdisplayshell-render.c: Fixed regression at zoom